--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
 
     <div class="prompt-area">    <input type="text" id="prompt" placeholder="Message.....">
-        <button id="image"><img src="img.svg" alt=""></button>
+        <button id="image"><img src="img.svg" alt=""><input type="file" accept="image/*" hidden ></button>
         <button id="submit"><img src="submit.svg" alt=""></button>
     </div>
 
