--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="chat-container">
 
         <div class="ai-chat-box">
-            <img src="bot.jpg" alt="" id="aiImage" width="50" height="40">
+            <img src="bot.jpg" alt="" id="aiImage" width="10%" height="40">
  
             <div class="ai-chat-area">
                 Hello ! How Can I Help you Today ?
